--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
 	"devDependencies": {
 		"fastclick": "~1.0.3",
 		"html5shiv": "~3.7.2",
-		"modernizr": "~2.8.3"
+		"modernizr": "~2.8.3",
+		"scrollMonitor": "~1.0.10"
 	}
 }
